[package]
name = "sqwerk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
thiserror = "1.0"
paste = "1.0"
base64 = "0.22.1"
rand = "0.8"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.0"
features = ["rt-multi-thread", "macros", "net"]

[dependencies.fastwebsockets]
git = "https://github.com/squareland/fastwebsockets"
features = ["upgrade", "unstable-split"]

[dependencies.hyper]
version = "1.0"
features = ["http1"]

[dependencies.bincode]
version = "1.3.3"